First pass at adding fine(-ish)-grained timing info to the logs.
This commit adds a new "Timer" object - a per-process singleton which
stores walltime measurements for different sections of the code, and
prints them to the log-files at the end of the calculation.

--- a/src/Universal/CMakeLists.txt
+++ b/src/Universal/CMakeLists.txt
@@ -8,6 +8,7 @@ set(MODS_UNIVERSAL  Eigensolver.cpp
                     PhysicalConstant.cpp
                     ScalapackMatrix.cpp
                     SpinorFunction.cpp
+                    Timer.cpp
                     Davidson.f
                     CACHE INTERNAL "")
 
