Initial effort at parapara integration
Refer to TODO-parapara for plan and progress.

* Add new parapara-based parameter reading in src/Specification,
  including AMBiT-style input parser.
* Split out Lattice configuration in its own structs.
* Use parapara to read Lattice parameters and pass to Atom.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,9 +69,10 @@ add_subdirectory(Configuration)
 add_subdirectory(ExternalField)
 add_subdirectory(HartreeFock)
 add_subdirectory(MBPT)
+add_subdirectory(Specification)
 add_subdirectory(Universal)
 
-target_link_libraries(ambit PUBLIC atom basis configuration externalfield hartreefock mbpt universal)
+target_link_libraries(ambit PUBLIC atom basis configuration externalfield hartreefock mbpt specification universal)
 
 # Install the "ambit" exe into "./bin".
 install(TARGETS ambit DESTINATION "bin")
