WIP: First pass at refactoring HamiltonianMatrix::GenerateMatrix for OpenMP
This commit is a first pass at refactoring the CI matrix routines to use
proper random-access iterators (with no hidden-state) so we can
eventually use arbitrarily fine-grained (or hierarchical) parallelism.
It currently fails some unit tests, though, so still needs work.

--- a/src/Configuration/CMakeLists.txt
+++ b/src/Configuration/CMakeLists.txt
@@ -25,5 +25,6 @@ if(USE_OPENMP)
 endif()
 
 target_link_libraries(configuration PUBLIC Eigen3::Eigen)
+target_link_libraries(configuration PUBLIC absl::flat_hash_map)
 target_include_directories(configuration PRIVATE ${Boost_INCLUDE_DIRS})
 target_link_libraries(configuration PUBLIC mbpt)
