--- a/.github/workflows/build-and-test-ubuntu.yml
+++ b/.github/workflows/build-and-test-ubuntu.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Install Dependencies
-      run: sudo apt install -y libeigen3-dev libabsl-dev
+      run: sudo apt install -y libeigen3-dev libabsl-dev libgsl-dev
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
